--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
 compose-multiplatform = "1.7.3"
+datastorePreferences = "1.1.4"
 junit = "4.13.2"
 koinCore = "3.5.6"
 koinTest = "3.2.0"
@@ -22,6 +23,7 @@ ktorVersion = "3.1.1"
 lifecycleViewmodelKtx = "2.8.7"
 
 [libraries]
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinCore" }
